# apps/auth-service/src/routes/auth.router.ts
@@ -1,10 +1,15 @@
 import { Router } from "express";
 import express from "express";
-import { userRegistration, verifyUser } from "../controller/auth.controller";
+import {
+  loginUser,
+  userRegistration,
+  verifyUser,
+} from "../controller/auth.controller";
 
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
 
 export default router;
